retoques de vista

--- a/Vista/CompartirMusica.html
+++ b/Vista/CompartirMusica.html
@@ -112,14 +112,14 @@
 					<div class="row-fluid">
 						<div class="span3">
 							<p>
-								Especifica el nick de la persona a la que le compartiras tu musica, dale en buscar y selecciona las canciones que tengas disponibles para convidar. 
+								Especifica el nick de la persona a la que le compartiras tu musica, dale en buscar y selecciona las canciones que tengas disponibles. 
 							</p>
 							
 							<form name="nick_filtro">
 								<fieldset>
 									<label>Nick:</label>
 									<input type="text" name="nicksearch" id="nicksearch" /><br />
-									<button type="reset" class="btn btn-primary"><i class="icon-search icon-white"></i> Limpiar</button>
+									<button type="reset" class="btn btn-primary">Limpiar</button>
 								</fieldset>
 							</form>
 							
